fix: background gradient at person shelf on mobile

--- a/src/components/sections/PersonShelf/styles.scss
+++ b/src/components/sections/PersonShelf/styles.scss
@@ -15,6 +15,7 @@
 }
 
 .person-content {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -28,57 +29,70 @@
     width: 270px;
   }
 
-  h3,
-  p {
-    position: absolute;
-    z-index: 999;
-    padding: 0 13px;
-
-    @media screen and (min-width: 380px) {
-      padding: 0;
-      font-size: 20px;
-    }
-  }
-
-  h3 {
-    bottom: 58px;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 150%;
-    color: #fff;
-
-    @include media(">=tablet") {
-      color: #000;
+  .person-description {
+    @include media("<=tablet") {
+      position: absolute;
+      bottom: 0;
+      z-index: 999;
+      width: 100%;
+      height: 35%;
+      padding: 0 13px;
+      background:
+        linear-gradient(
+          to bottom,
+          rgb(0 0 0 / 0%) 0%,
+          rgb(0 0 0 / 95%) 100%
+        );
     }
 
-    @media (max-width: 380px) {
-      font-size: 14px;
-    }
-  }
-
-  p {
-    bottom: 30px;
-    font-size: 12px;
-    font-style: normal;
-    font-weight: 400;
-    color: #f5f5f5;
-
-    @include media(">=tablet") {
-      font-weight: normal;
-      font-weight: 700;
-      color: #555555;
-    }
-
-    @media (max-width: 380px) {
-      font-size: 10px;
-    }
-  }
-
-  @include media(">=tablet") {
     h3,
     p {
-      position: unset;
+      @media screen and (min-width: 380px) {
+        padding: 0;
+        font-size: 20px;
+      }
+    }
+
+    h3 {
+      bottom: 58px;
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 600;
+      line-height: 150%;
+      color: #fff;
+
+      @include media(">=tablet") {
+        color: #000;
+      }
+
+      @media (max-width: 380px) {
+        font-size: 14px;
+      }
+    }
+
+    p {
+      bottom: 30px;
+      font-size: 12px;
+      font-style: normal;
+      font-weight: 400;
+      color: #f5f5f5;
+
+      @include media(">=tablet") {
+        font-weight: normal;
+        font-weight: 700;
+        color: #555555;
+      }
+
+      @media (max-width: 380px) {
+        font-size: 10px;
+      }
+    }
+
+    @include media(">=tablet") {
+      h3,
+      p {
+        position: unset;
+      }
     }
   }
 }
